/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package github.com.kaleido_io.paladin.toolkit;

message ConfigureTransportRequest {
  string name = 1; // The name
  string config_json= 2; // The block of config supplied in the configuration for the domain by the Paladin administrator (converted from YAML to JSON for transport)
}

message ConfigureTransportResponse {
}

message SendMessageRequest {
    Message message = 1;
}

message SendMessageResponse {
}

message Destination {
    string node = 1;
    // TODO: discuss with Hosie
    // string component = 2;
    // string identity = 3;
}

message Message {
    string message_id = 1;
    optional string correlation_id = 2;
    Destination destination = 3;
    Destination reply_to = 4;
    bytes payload = 5;
}